# yutori-sdk-python

./: .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  PLAN.md  README.md  api.md  install.sh  install.sh.template  llms.txt  plan.md  pyproject.toml  uninstall.sh
.claude/: CLEANUP.md  CLEANUP_LOG.md  REFACTOR.md
.github/workflows/: ci.yml  publish_to_pypi.yml
assets/terminal/: agent_logo_frames.txt  yutori_banner.txt
examples/: README.md  _common.py  n1.py  n1_5.py  n1_custom_tools.py  n1_memo.py  navigator.py  navigator_1_5.py  navigator_memo.py  navigator_n1.py  navigator_n1_5.py  navigator_n1_custom_tools.py  navigator_n1_memo.py
examples/scripts/: extract_dom_elements.js  (+2 more)
scripts/: build_install.sh  check_install_sh_fresh.sh
tests/: __init__.py  _usage_fixtures.py  conftest.py  test_async_client.py  test_auth.py  test_bash_scripts.py  test_cli.py  test_cli_auth.py  test_client.py  test_http.py  test_install_flow.py  test_install_ui.py  test_n1_browser.py  test_n1_compat.py  test_n1_content.py  test_n1_coordinates.py  test_n1_hooks.py  test_n1_images.py  test_n1_keys.py  test_n1_models.py  test_n1_page_ready.py  test_n1_payload.py  test_n1_playwright.py  test_n1_replay.py  test_navigator_content.py  test_navigator_coordinates.py  test_navigator_hooks.py  test_navigator_images.py  test_navigator_keys.py  test_navigator_models.py  test_navigator_page_ready.py  test_navigator_payload.py  test_navigator_replay.py  test_navigator_tools.py  test_packaging.py  test_schema.py
yutori/: __init__.py  _http.py  _schema.py  async_client.py  client.py  config.py  exceptions.py
(+83 files in other folders)
