[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yutori"
version = "0.1.0"
description = "Official Python SDK for the Yutori API"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Yutori", email = "support@yutori.com" },
]

license = { text = "Apache License 2.0" }
keywords = ["yutori", "sdk", "api", "automation", "web-agent", "browser", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.26.0,<0.28.0",
]

[project.urls]
Homepage = "https://yutori.com"
Documentation = "https://docs.yutori.com"
Repository = "https://github.com/yutori-ai/yutori-sdk-python"
Issues = "https://github.com/yutori-ai/yutori-sdk-python/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["yutori*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

